--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "simple_api",
   "version": "0.0.1",
   "description": "core",
+  "main": "server.js",
   "scripts": {
-    "start": "supervisor server.js"
+    "start": "nodemon server.js"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "nodemon": "^2.0.20"
   }
 }
